# sentinel-fusion

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.toml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-05fcf7ec04a6eb49030037caf597b32a5b758169271389eafa10343b6e170173.json  query-0b9a4b0f4dcc40eb86fa3131e033f21728c08d21dfea9c351fa8b88deaebd60c.json  query-52ec6dad18307e57b77d349a33d13c58957728f146f24ed7f0867b624eaeaebe.json  query-60497fcdb67aaa01f5303fc60fdc2eaa5dca79441de5bc1f7704388a9c267bd3.json  query-670eb3fe9de300f9b88562386d1849af3449114f2a71c3748d2db941587da3bc.json  query-706869db20c867ce995346165898b15c8ab1d0915a46e0b46be62df617fd099a.json  query-772025071927432315f098e5accdf8d486c7e05b8c98bf5d6c2c5796359b49a6.json  query-8006881e7675ebba7279a537a70e400fc23942d4971450a2ce6de0b9a0228e2d.json  query-9684154cefff55bf4199f6b58ce11065ec0afcccc44f694ccbab824acdfcb1bd.json  query-9f423b8b035c5c7c855742e1ef5062e7a46b0b2ea3f801cd8f0e6f0409574c74.json  query-a05386f5c3fb50bf4a662b93d4e45e128835554eadc6c99393e7454e423bcc24.json  query-e93f23db6dba78a70612b5ba771fdd577f7d4d8ad4b75332a682e31c2ef4c627.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs  opensky.rs  sse.rs  state.rs
backend/crates/api/src/middleware/: metrics.rs
backend/crates/api/src/routes/: aircraft.rs  demo.rs  events.rs  health.rs  incidents.rs  mod.rs  stats.rs  stream.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: lib.rs  models.rs
backend/crates/db/src/queries/: events.rs  incidents.rs  mod.rs
backend/crates/fusion/: Cargo.toml
backend/crates/fusion/src/: clustering.rs  dedup.rs  engine.rs  lib.rs  scoring.rs  templates.rs
backend/crates/ingest/: Cargo.toml
backend/crates/ingest/src/: lib.rs  normalizer.rs
backend/crates/ingest/src/sources/: camera.rs  drone.rs  mod.rs  radar.rs  rf_sensor.rs
db-migrations/: migrations.py  pyproject.toml  simulate.py
db-migrations/migrations/: 001_schema.sql  002_indexes.sql
db-migrations/seed/: events.json  seed.sh
docker/: Dockerfile.db
docker/init/: 01-extensions.sql
docs/: PRD.md  social-media.md
frontend/: package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(ops)/: layout.tsx
frontend/src/app/(ops)/analytics/: page.tsx
frontend/src/app/(ops)/dashboard/: page.tsx
frontend/src/app/(ops)/events/: page.tsx
frontend/src/app/(ops)/incidents/: page.tsx
frontend/src/app/(ops)/incidents/[id]/: page.tsx
frontend/src/app/api/aircraft/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/components/: app-sidebar.tsx  data-table.tsx  incident-detail-map.tsx  incident-detail-panel.tsx  incident-map.tsx  incident-table.tsx  nav-main.tsx  nav-user.tsx  pipeline-stats.tsx  site-header.tsx  theme-toggle.tsx
frontend/src/hooks/: useIncidents.ts  useSSE.ts  useStats.ts
frontend/src/types/: incident.ts
