[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/fusion",
    "crates/ingest",
    "crates/db",
]

[workspace.dependencies]
# Async runtime
tokio       = { version = "1", features = ["full"] }

# HTTP framework
axum        = { version = "0.7", features = ["macros"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx        = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Types
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }

# Error handling
anyhow      = "1"
thiserror   = "1"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }

# Config
dotenvy     = "0.15"
