[project]
name = "db-migrations"
version = "0.1.0"
description = "Database migration and seed CLI for Sentinel Fusion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.scripts]
migrate   = "migrations:app"
simulate  = "simulate:main"
