[package]
name    = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
db      = { path = "../db" }
fusion  = { path = "../fusion" }
ingest  = { path = "../ingest" }

tokio           = { workspace = true }
axum            = { workspace = true }
tower           = { workspace = true }
tower-http      = { workspace = true }
sqlx            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy         = { workspace = true }
