[package]
name    = "fusion"
version = "0.1.0"
edition = "2021"

[dependencies]
db      = { path = "../db" }

tokio        = { workspace = true }
sqlx         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tokio-stream = { workspace = true }
